--- a/index.html
+++ b/index.html
@@ -3,56 +3,53 @@
   <head>
     <meta charset="UTF-8">
     <title>ESO Crafting Calculator</title>
-    <!--<link rel="stylesheet" href="normalize.css">-->
-    <!--<link rel="stylesheet" href="skeleton.css">-->
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="custom.css">
   </head>
   <body>
-    <h1>Armor</h1>
-    <form id="itemTable">
-        <table id="armorTable" border="1">
-          <thead>
+    <div class="container">
+      <div class="row">
+        <div class="eight columns">
+          <h2>Armor</h2>
+          <form id="itemTable">
+              <table id="armorTable">
+                <thead>
+                  <tr>
+                    <th>Slot</th>
+                    <th>Level</th>
+                    <th>Weight</th>
+                    <th>Trait</th>
+                    <th>Quality</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
+              <button type="button" id="addArmorButton">+</button>
+          </form>
+        </div>
+
+        <div class="four columns">
+          <h2>Shopping List</h2>
+          <table id="shoppingList">
+            <thead>
               <tr>
-                  <th>Slot</th>
-                  <th>Level</th>
-                  <th>Weight</th>
-                  <th>Trait</th>
-                  <th>Quality</th>
-                  <th>Mat</th>
-                  <th>Qty</th>
-                  <th>Trait Gem</th>
-                  <th>Fine</th>
-                  <th>Qty</th>
-                  <th>Superior</th>
-                  <th>Qty</th>
-                  <th>Epic</th>
-                  <th>Qty</th>
-                  <th>Legendary</th>
-                  <th>Qty</th>
+                <th>Item</th>
+                <th>Quantity</th>
+                <th>Cost</th>
               </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-        <button type="button" id="addArmorButton">+</button>
-    </form>
-
-    <h1>Shopping List</h1>
-    <table id="shoppingList" border="1">
-      <thead>
-        <tr>
-          <th>Item</th>
-          <th>Quantity</th>
-          <th>Cost</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-      <tfoot>
-        <tr>
-          <td colspan="2">Total</td>
-          <td>0</td>
-        </tr>
-      </tfoot>
-    </table>
-
+            </thead>
+            <tbody></tbody>
+            <tfoot>
+              <tr>
+                <td colspan="2">Total</td>
+                <td>0</td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </div>
+    </div>
     <script src="./renderer.js"></script>
   </body>
 </html>
