--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <div class="container">
       <div class="row">
         <div class="eight columns">
-          <h2>Armor</h2>
-          <form id="itemTable">
-              <table id="armorTable">
-                <thead>
-                  <tr>
-                    <th>Slot</th>
-                    <th>Level</th>
-                    <th>Weight</th>
-                    <th>Trait</th>
-                    <th>Quality</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
-              <button type="button" id="addArmorButton">+</button>
+          <form id="craftForm">
+            <h3>Stuff</h3>
+            <table id="itemTable">
+              <thead>
+                <tr>
+                  <th>Type</th>
+                  <th>Level</th>
+                  <th>Weight</th>
+                  <th>Trait</th>
+                  <th>Quality</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+            <button type="button" id="addItem">+</button>
           </form>
         </div>
 
         <div class="four columns">
-          <h2>Shopping List</h2>
+          <h3>Shopping List</h3>
           <table id="shoppingList">
             <thead>
               <tr>
