--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="custom.css">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="eight columns">
-          <form id="craftForm">
+    <form id="craftForm">
+      <div class="container">
+        <div class="row">
+          <div class="eight columns">
             <h3>Stuff</h3>
             <table id="itemTable">
               <thead>
@@ -26,31 +26,32 @@
               </thead>
               <tbody></tbody>
             </table>
-            <button type="button" id="addItem">+</button>
-          </form>
-        </div>
+            <button type="button" id="addItem">Add item</button>
+          </div>
 
-        <div class="four columns">
-          <h3>Shopping List</h3>
-          <table id="shoppingList">
-            <thead>
-              <tr>
-                <th>Item</th>
-                <th>Quantity</th>
-                <th>Cost</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-            <tfoot>
-              <tr>
-                <td colspan="2">Total</td>
-                <td>0</td>
-              </tr>
-            </tfoot>
-          </table>
+          <div class="four columns">
+            <h3>Shopping List</h3>
+            <button type="button" id="editPrices">Edit material prices</button>
+            <table id="shoppingList">
+              <thead>
+                <tr>
+                  <th>Item</th>
+                  <th>Quantity</th>
+                  <th>Cost</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="2">Total</td>
+                  <td>0</td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
         </div>
       </div>
-    </div>
+    </form>
     <script src="./renderer.js"></script>
   </body>
 </html>
