update shopping list with new prices

--- a/prices.html
+++ b/prices.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="custom.css">
   </head>
   <body>
-    <form id="craftForm">
+    <form id="priceForm">
       <div class="container">
         <h3>Material Prices</h3>
         <table id="priceTable">
@@ -21,6 +21,7 @@
           <tbody></tbody>
         </table>
       </div>
+      <button type="button" id="save">Save</button>
     </form>
     <script src="./pricerenderer.js"></script>
   </body>
