read suggested prices from local TTC price table

--- a/prices.html
+++ b/prices.html
@@ -11,6 +11,7 @@
     <form id="priceForm">
       <div class="container">
         <h3>Material Prices</h3>
+        <button type="button" id="save">Save</button> <button type="button" id="loadTtc">Load TTC Suggested Prices</button>
         <table id="priceTable">
           <thead>
             <tr>
