--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="row">
           <div class="eight columns">
-            <h3>Stuff</h3>
+            <h3>Stuff to Craft</h3>
             <table id="itemTable">
               <thead>
                 <tr>
